<resources>
    <!--versi 2-->
    <string name="beranda">Home</string>
    <string name="news">News &amp; Promo</string>
    <!--versi 1-->
    <string name="app_name">Go Green</string>
    <string name="username">Email</string>
    <string name="email">Email</string>
    <string name="jenis_sampah">Jenis Sampah</string>
    <string name="berat_sampah">Berat Sampah (kg)</string>
    <string name="jumlah_penarikan">Jumlah Penarikan</string>
    <string name="gunakan_saldo">Gunakan Saldo</string>
    <string name="estimasi">Estimasi Harga</string>
    <string name="jenis_penarikan">Jenis Penarikan</string>
    <string name="pilih_jenis_penarikan">Pilih Jenis Penarikan</string>
    <string name="estimasi_saldo">Total Saldo Terpakai</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="produk">Produk daur ulang sampah</string>
    <string name="tukar_sampah">Sampah yang bisa ditukar</string>
    <string name="simpan_message">Silahkan isi form berikut untuk mulai menyimpan sampah</string>
    <string name="withdraw_message">Silahkan isi form berikut untuk melakukan penarikan saldo</string>
    <string name="beli">Beli Sekarang</string>
    <string name="tukar">Tukar Sekarang</string>
    <string name="saldo_anda">Saldo anda</string>
    <string name="otp_number">OTP Number</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome_message">Silahkan login untuk akses aplikasi ini</string>
    <string name="welcome_message_register">Silahkan mendaftar untuk akses aplikasi ini</string>
    <string name="otp_message">Silahkan isi email anda yang terdaftar pada aplikasi ini</string>
    <string name="reset_message">Silahkan isi data berikut ini</string>
    <string name="signin">Log In</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_pass">Reset Password</string>
    <string name="signout">Log Out</string>
    <string name="forgot">Lupa Password ?</string>
    <string name="pencairan">Ajukan Pencairan</string>
    <string name="submitVisit">Check In</string>
    <string name="outletList">Outlet List</string>
    <string name="sync_data">Sync Data</string>
    <string name="takePhoto">Market Update</string>
    <string name="takeOrder">Take Order</string>
    <string name="history">History</string>
    <string name="riwayat_subtitle">Riwayat simpanan, transaksi, ataupun penarikan anda</string>
    <string name="draft">Draft</string>
    <string name="billing">Billing</string>
    <string name="menu_bad">Bad Coverage</string>
    <string name="refresh">Refresh</string>
    <string name="name">Nama</string>
    <string name="distributor">Dist / Subdistributor</string>
    <string name="address">Alamat</string>
    <string name="city">City</string>
    <string name="outletType">Channel</string>
    <string name="outletPhoto">Outlet Photo</string>
    <string name="outletRank">Outlet Rank</string>
    <string name="phone">Nomor Telepon</string>
    <string name="date">Tanggal</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="photoTitle">Nama Photo</string>
    <string name="note">Catatan</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="brand">Competitor</string>
    <string name="register">Register</string>
    <string name="backToHome">Back to Home</string>
    <string name="getCoordinate">Koordinat</string>
    <string name="getNow">Cek Koordinat</string>
    <string name="next">Next</string>
    <string name="copyright">Copyright \u00A9 2025. Bank Sampah Go Green</string>
    <string name="copyright_front">Copyright \u00A9</string>
    <string name="copyright_back">Bank Sampah Go Green</string>
    <string name="link">Copyright 2025. Bank Sampah Go Green</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="versi">Versi 1.0.0</string>
    <string name="visit_date">Visit Date :</string>
    <string name="enter_date">Enter Visit Date</string>
    <string name="enter_tanggal">Enter Date</string>
    <string name="search_hint">Cari Outlet</string>

    <!--- ABOUT APPLICATION -->
    <string name="about_app">
         Panduan Penggunaan Aplikasi\n\n
                                • Anda harus login terlebih dahulu untuk bisa menggunakan Aplikasi ini. \n\n
                                • Pendaftaran Outlet harus mendapatkan approval, sebelum outlet tersebut akan tampil di outlet list \n\n
                                • Approval pendaftaran outlet bisa di-skip, apabila saat registrasi outlet ada Effective call \n\n
                                • Pastikan koordinat Anda sama dengan koordinat outlet, saat Anda melakukan Submit Visit. \n\n
                                • Secara berkala silahkan tekan tombol "refresh", untuk update data dari server. \n\n
                                • History akan terhapus, saat Anda Log out aplikasi. \n\n
                                • Harap di cek ke-valid-an data, sebelum Anda melakukan inputan apapun dalam aplikasi ini. \n\n
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_info">Info</string>
    <string name="title_activity_outlet_list">OutletList</string>
    <string name="title_activity_visit_plan">VisitPlan</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_take_photo">Take Photo</string>
    <string name="title_tab_outlet">Sales Activity</string>
    <string name="title_tab_news">Informasi, Bantuan, Q&amp;A Sistem</string>
    <string name="title_tab_competitor">Competitor</string>
    <string name="title_activity_submit_visit">Submit Visit</string>
    <string name="title_activity_register_outlet">Register Outlet</string>
    <string name="title_activity_register_visit_plan">Register Visit Plan</string>
    <string name="title_profil">Profil</string>
    <string name="title_about">About</string>
    <string name="title_recover">Recover your account</string>
    <string name="message_recover">Untuk mengubah password anda, silahkan lengkapi data diri anda di bawah ini terlebih dahulu.</string>
    <string name="visit_hari_ini">Outlet yang telah dikunjungi</string>
    <string name="cari_outlet">Cari outlet...</string>
    <string name="rooted_notif">Aplikasi ini tidak dapat dipakai karena HP anda terdeteksi sudah di root.</string>
    <string name="fakegps_notif">Aplikasi ini tidak dapat dipakai karena di HP anda terpasang aplikasi fake gps.</string>
    <string name="message_must_fill">Pastikan semua isian telah terisi</string>
    <string name="message_bayar">Segera lakukan pembayaran</string>
    <string name="message_upload_fail">Data gagal terupload karena </string>
    <string name="status_presence">Status Presence</string>
    <string name="status_outlet">Status Outlet</string>
    <string name="status">Status</string>
    <string name="status_order">Status Order</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="faq">FAQ</string>
    <string name="total_harga">Total Harus Dibayar</string>
    <string name="tambah_produk">Tambah</string>
    <string name="add_to_cart">Masukkan Keranjang</string>
    <string name="checkout">Lanjutkan Pembelian</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="acro_checkin_office">CI Office</string>
    <string name="acro_checkin_visit">CI Visit</string>
    <string name="acro_checkout_office">CO Office</string>
    <string name="acro_checkout_visit">CO Visit</string>
    <string name="message_success">Proses Berhasil</string>
    <string name="download">Download</string>
    <string name="ket_tutup">Keterangan Tutup</string>
    <string name="no_visit_today">Tidak ada visitplan untuk hari ini</string>
    <string name="date_from">Tanggal Mulai</string>
    <string name="date_until">Tanggal Selesai</string>
    <string name="kota_tujuan">Kota Tujuan</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_opsi">Pilih Opsi Ini</string>
    <string name="catalog">Catalog</string>
    <string name="cara_pembayaran">Cara Pembayaran</string>
    <string name="cara_pembayaran_content">Silahkan lakukan pembayaran sebesar nominal tertera dengan cara transfer ke rekening Bank BRI <b>741701044050536</b> atas nama <b>Nurul Rofiqoh</b></string>
    <string name="copy_rekening">Salin Nomor Rekening</string>
    <string name="copy_nominal">Salin Nominal</string>
    <string name="product_catalog">Katalog produk hasil daur ulang sampah</string>
    <string name="pricelist">Pricelist</string>
    <string name="spinner_text">spinner text</string>
    <string name="qty">qty</string>
    <string name="product_default">Salonpas koyo</string>
    <string name="satuan">satuan</string>
    <string name="outlet_field">Outlet :&#160;</string>
    <string name="cash_field">Cash</string>
    <string name="transfer_field">Transfer</string>
    <string name="nominal_harus_bayar">Nominal yang harus dibayar</string>
    <string name="no_giro_field">No Giro :&#160;</string>
    <string name="due_date_field">Due Date :&#160;</string>
    <string name="input_date_field">Input Date :&#160;</string>
    <string name="bank_field">Bank :&#160;</string>
    <string name="note_field">Note :&#160;</string>
    <string name="no_item">Tidak Ada Data</string>
    <string name="please_wait">Please wait ...</string>
    <string name="save_as_draft">Save as Draft</string>

    <string name="file_not_found">File tidak ditemukan</string>
    <string name="last_visit">Last Visit</string>
    <string name="lihat_semua">Lihat Semua</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="riwayat_tab_title_1">Simpanan</string>
    <string name="riwayat_tab_title_2">Transaksi</string>
    <string name="riwayat_tab_title_3">Penarikan</string>
    <string name="status_transaction_0">Menunggu</string>
    <string name="status_transaction_1">Diproses</string>
    <string name="status_transaction_2">Ditolak</string>
    <string name="status_transaction_3">Selesai</string>
    <string name="status_semua">Semua</string>
    <string name="status_0_saving">Menunggu</string>
    <string name="status_1_saving">Diterima</string>
    <string name="status_2_saving">Ditolak</string>
    <string name="status_3_saving">Selesai</string>
</resources>
