<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_dashboard"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.qiratek.rnpsales.view.fragment.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_news"
            app:destination="@id/history" />
        <action
            android:id="@+id/action_home_to_catalog"
            app:destination="@id/catalog" />
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profile" />
    </fragment>

    <fragment
        android:id="@+id/history"
        android:name="com.qiratek.rnpsales.view.fragment.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_to_home"
            app:destination="@id/home" />
        <action
            android:id="@+id/action_history_to_catalog"
            app:destination="@id/catalog" />
        <action
            android:id="@+id/action_history_to_profile"
            app:destination="@id/profile" />
    </fragment>
    <fragment
        android:id="@+id/catalog"
        android:name="com.qiratek.rnpsales.view.fragment.EcatalogFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_ecatalog">
        <action
            android:id="@+id/action_catalog_to_home"
            app:destination="@id/home" />
        <action
            android:id="@+id/action_catalog_to_history"
            app:destination="@id/history" />
        <action
            android:id="@+id/action_catalog_to_profile"
            app:destination="@id/profile" />
    </fragment>
    <fragment
        android:id="@+id/profile"
        android:name="com.qiratek.rnpsales.view.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_home"
            app:destination="@id/home" />
        <action
            android:id="@+id/action_profile_to_history"
            app:destination="@id/history" />
        <action
            android:id="@+id/action_profile_to_catalog"
            app:destination="@id/catalog" />
    </fragment>
</navigation>