<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_new"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/iv_size_takePhoto"
            android:layout_marginTop="70dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright_back"
            android:layout_marginBottom="@dimen/spacing_xlarge"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/spacing_xxxlarge">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_big"
                android:textColor="@android:color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/welcome_message"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_very_small"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/spacing_large"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/input_round_border"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_xmedium"
                android:paddingBottom="@dimen/spacing_xmedium"
                android:hint="@string/username" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/password"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/input_round_border"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_xmedium"
                android:paddingBottom="@dimen/spacing_xmedium"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/forgot"
                android:textColor="@color/primary_3"
                android:textSize="@dimen/text_size"
                android:layout_marginBottom="@dimen/spacing_xxxlarge"
                android:visibility="gone"/>

            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_xmedium"
                android:layout_marginRight="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                android:background="@drawable/rounded_primary"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/signin"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
