<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outlet_field"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_outlet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outlet_field"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_field"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash_field"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_field"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transfer_field"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_container_giro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nominal_giro_field"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_nominal_giro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nominal_giro_field"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_giro_field"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_no_giro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_giro_field"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date_field"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/due_date_field"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_date_field"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_date_field"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_field"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_field"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_field"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_field"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>