<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_new"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <include
        android:id="@+id/topbar"
        layout="@layout/main_topbar"/>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_xmedium"
        android:layout_marginRight="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@drawable/rounded_primary"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_above="@id/btn_submit"
        android:layout_below="@id/topbar"
        android:background="@color/background_new">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:background="@color/background_new"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/nominal_harus_bayar"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/nominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:background="@drawable/shape_gray"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:padding="@dimen/medium_margin"  />
            <TextView
                android:id="@+id/salin_nominal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/copy_nominal"
                android:textColor="@color/info_3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/cara_pembayaran"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/cara_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size"
                android:gravity="center_vertical"
                android:text="@string/cara_pembayaran_content"
                android:lineSpacingExtra="@dimen/text_size_very_very_small"/>

            <TextView
                android:id="@+id/salin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/copy_rekening"
                android:textColor="@color/info_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="Gambar"
                android:textColor="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_dashed_line"
                android:padding="@dimen/spacing_large"
                android:minHeight="@dimen/et_height_xbig"
                android:layout_marginBottom="@dimen/spacing_large">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/foto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:src="@drawable/ic_picture" />

                    <TextView
                        android:id="@+id/button_take"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_primary_2"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large"
                        android:paddingTop="@dimen/spacing_small"
                        android:paddingBottom="@dimen/spacing_small"
                        android:text="Upload Gambar"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold"
                        android:textColor="@color/text_black"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>